--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <section class="content">
-    <img class="hero" scr="../images/digital-marketing-meeting.jpg">
+    <img class="hero" src="../images/digital-marketing-meeting.jpg">
   </section>
   <section class="sos">
     <img id="float-left" src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization">
